--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
     "@eslint/js": "^9.30.1",
     "eslint": "^9.30.1",
     "globals": "^16.3.0"
+  },
+  "dependencies": {
+    "mathjs": "^14.5.3"
   }
 }
