Add vectorsPage.js for vector operations and visualizations
- Implemented various vector operations including vector representation, addition, projection, and moments in both 2D and 3D spaces.
- Created exercises for graphical vector addition, velocity components, scalar products, and area calculations in 3D.
- Utilized math.js for mathematical computations and SVG for graphical representations.

--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,23 @@
-# Ignorar la carpeta de módulos de Node.js
+# Node modules
 node_modules/
 
-# Ignorar archivos específicos de configuración de VS Code
+# Vite build output
+dist/
+
+# Vite cache
+.vite/
+
+# VS Code settings
 .vscode/
 
-# Ignorar archivos de log y temporales (ejemplos comunes)
+# Logs and temporary files
 *.log
 *.tmp
-.DS_Store # Archivos de macOS
 
-# Ignorar variables de entorno (si las tuvieras en el futuro)
+# macOS system files
+.DS_Store
+
+# Environment variables
 .env
+
+# End of .gitignore
