--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Website for physics showing how to represent mathematical expressions and svg/JavaScript coded drawings.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "vite", 
+    "build": "vite build"
   },
   "repository": {
     "type": "git",
@@ -20,9 +22,10 @@
   "devDependencies": {
     "@eslint/js": "^9.30.1",
     "eslint": "^9.30.1",
-    "globals": "^16.3.0"
+    "globals": "^16.3.0",
+    "vite": "^7.3.1"
   },
   "dependencies": {
-    "mathjs": "^14.5.3"
+    "mathjs": "^14.9.1"
   }
 }
