adaptación de geometría a mdx

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@astrojs/mdx": "^4.3.13",
     "astro": "^5.16.15",
     "mathjs": "^15.1.0",
+    "rehype-figure": "^1.0.1",
     "rehype-katex": "^7.0.1",
     "remark-math": "^6.0.0"
   }
